--- a/moviestore2110_22876/guestmasterpage.Master
+++ b/moviestore2110_22876/guestmasterpage.Master
@@ -1,5 +1,7 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="guestmasterpage.master.cs" Inherits="moviestore2110_22876.guestmasterpage" %>
 
+<%@ Register Src="~/tutorials/week5/logincrtl.ascx" TagPrefix="user" TagName="login" %>
+
 <!DOCTYPE html>
 
 <html>
@@ -16,8 +18,24 @@
     <link
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
         rel="stylesheet" />
+    <link href="Content/bootstrap5.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" />
+    <script src='<%= ResolveClientUrl("~/Scripts/jquery-3.7.1.js") %>'> </script>
+    <script src='<%= ResolveClientUrl("~/Scripts/bootstrap5.bundle.min.js") %>'> </script>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
+    <style>
+        .modal-header, h4, .close {
+            background-color: #5cb85c;
+            color: white !important;
+            text-align: center;
+            font-size: 30px;
+        }
+
+        .modal-footer {
+            background-color: #f9f9f9;
+        }
+    </style>
 </head>
 <body>
     <form id="form1" runat="server">
@@ -111,8 +129,27 @@ see http://go.microsoft.com/fwlink/?LinkID=301884 --%>
                     </ul>
                     <div class="navbar-collapse flex-grow-1 text-right" id="myNavbar">
                         <ul class="navbar-nav ms-auto flex-nowrap">
-                            <li class="nav-item"><a class="nav-link" runat="server" id="A1"
-                                href="~/Login">Login</a></li>
+
+                            <asp:Panel runat="server" ID="pnllog">
+                                <li class="nav-item dropdown">
+                                    <a href="#" class="nav-link dropdown-toggle"
+                                        data-bs-toggle="dropdown" role="button" aria-haspopup="true"
+                                        aria-expanded="false">Login<span class="caret"></span></a>
+                                    <ul class="dropdown-menu">
+                                        <li class="nav-item">
+                                            <a class="dropdown-item"
+                                                href="<%= ResolveClientUrl("~/tutorials/week5/login") %>">User</a></li>
+                                        <li class="nav-item">
+                                            <a id="logadmin" href="#" class="dropdown-item" data-bs-toggle="modal"
+                                                data-bs-target="#lgadmin">Admin</a></li>
+                                        <li role="separator" class="divider"></li>
+                                        <li class="nav-item">
+                                            <a rel="modal:open" class="dropdown-item" id="modopen"
+                                                data-bs-toggle="modal" href="#modadmin">Sub Admin</a>
+                                        </li>
+                                    </ul>
+                                </li>
+                            </asp:Panel>
                             <li class="nav-item"><a class="nav-link" runat="server" id="hyregister"
                                 href="~/Register">Register</a></li>
                         </ul>
@@ -182,9 +219,47 @@ see http://go.microsoft.com/fwlink/?LinkID=301884 --%>
                 </div>
             </footer>
         </div>
+        <!-- Login Modal Admin -->
+        <div class="modal fade" id="modadmin" role="dialog">
+            <div class="modal-dialog">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title">Sub Admin Login</h4>
+                        <button type="button" class="close"
+                            data-bs-dismiss="modal">
+                            &times;</button>
+                    </div>
+                    <div class="modal-body">
+
+                        <user:login runat="server" ID="subadminlogin" ValidationGroup="subadminlogingroup" />
+                        <br />
+                        <asp:Label ID="lblmsg" runat="server"></asp:Label>
+                        <div>
+                            <asp:Button ID="btnLogin"
+                                CssClass="btn btn-success btn-block" runat="server" Text="Login" ValidationGroup="subadminlogingroup" />
+
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-danger pull-left"
+                            data-bs-dismiss="modal">
+                            Close</button>
+                        <p>Not a member? <a href="#">Sign Up</a></p>
+                        <p>Forgot <a href="#">Password?</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </form>
 
-
+    <script>
+        function adminModal() {
+            $(document).ready(function () {
+                $('#modadmin').modal('show');
+            });
+        }
+    </script>
     <script src='<%= ResolveClientUrl("~/Scripts/jquery-3.7.1.js") %>'>
     </script>
 
